# imranview

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml  release.yml
assets/icons/tabler/: NOTICE.md
docs/: ARCHITECTURE.md  PRD.md
scripts/: package_release.sh  perf_gate.sh
scripts/release/: package_appimage.sh  package_dmg.sh
scripts/windows/: installer.nsi
src/: app_state.rs  catalog.rs  image_io.rs  lib.rs  main.rs  native_menu.rs  pending_requests.rs  perf.rs  picker.rs  plugin.rs  settings.rs  shortcuts.rs  turbojpeg_backend.rs  worker.rs
src/app/: actions.rs  bootstrap.rs  controller.rs  controller_actions.rs  dialog_state.rs  mod.rs  model.rs  runtime.rs  runtime_panels.rs  runtime_platform.rs  ui_dialogs.rs  ui_dialogs_edit.rs  ui_shell.rs  view.rs
src/worker/: image_ops.rs  panorama.rs  tasks.rs
tests/: perf_smoke.rs  picker_latency_vectors.rs
ui/: app-window.slint
