[package]
name = "imranview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui = "0.31"
env_logger = "0.11"
exif = { version = "0.6", package = "kamadak-exif" }
image = { version = "0.25", default-features = false, features = [
    "avif",
    "bmp",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "rayon",
    "tiff",
    "webp",
] }
log = "0.4"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.13"
