[package]
name = "imranview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crc32fast = "1.5"
eframe = "0.31"
egui = "0.31"
env_logger = "0.11"
exif = { version = "0.6", package = "kamadak-exif" }
flate2 = "1.1"
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = [
    "avif",
    "bmp",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "rayon",
    "tiff",
    "webp",
] }
log = "0.4"
lcms2 = { version = "6.1.1", features = ["static"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tiff = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
muda = "0.17"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
muda = "0.17"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.13"
